--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   url_launcher: ^6.3.0
   youtube_player_flutter: ^8.1.2
   basic_utils: ^5.7.0
+  firebase_core: ^3.4.0
+  firebase_crashlytics: ^4.1.0
+  firebase_analytics: ^11.3.0
 
 dev_dependencies:
   flutter_test:
