--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -26,7 +26,7 @@ if (flutterVersionName == null) {
 }
 
 android {
-    namespace "com.saintGeorgeChurch.shepherdVoice"
+    namespace "com.example.shepherd_voice"
     compileSdk flutter.compileSdkVersion
     ndkVersion flutter.ndkVersion
 
