--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.0+6
 
 environment:
   sdk: '>=3.3.0 <4.0.0'
@@ -49,6 +49,16 @@ dependencies:
   firebase_core: ^3.4.0
   firebase_crashlytics: ^4.1.0
   firebase_analytics: ^11.3.0
+  firebase_messaging: ^15.1.0
+  pdf: ^3.11.1
+  flutter_pdfview: ^1.3.2
+  permission_handler: ^11.3.1
+  percent_indicator: ^4.2.3
+  dio: ^5.7.0
+  path_provider: ^2.1.4
+  flutter_local_notifications: ^17.2.2
+  cached_network_image: ^3.4.0
+  photo_view: ^0.15.0
 
 dev_dependencies:
   flutter_test:
