--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   flutter_local_notifications: ^17.2.2
   cached_network_image: ^3.4.0
   photo_view: ^0.15.0
+  share_plus: ^10.1.2
 
 dev_dependencies:
   flutter_test:
