--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   cached_network_image: ^3.4.0
   photo_view: ^0.15.0
   share_plus: ^10.1.2
+  flutter_bloc: ^9.1.1
 
 dev_dependencies:
   flutter_test:
